--- a/src/main/resources/workbench-connection.properties
+++ b/src/main/resources/workbench-connection.properties
@@ -1,3 +1,3 @@
-url=http://10.4.14.245:8080/workbench-app/api/runtime/process-instances
-username=admin
-password=test
+url=http://10.4.15.6:8080/workbench-app/api/runtime/process-instances
+workbenchUsername=admin
+workbenchPassword=test
