--- a/src/main/resources/workbench-connection.properties
+++ b/src/main/resources/workbench-connection.properties
@@ -1,3 +1,3 @@
-url=http://10.4.12.70:8080/workbench-app/api/runtime/process-instances
+url=http://localhost:8080/workbench-app/api/runtime/process-instances
 workbenchUsername=admin
 workbenchPassword=test
